# application-pipeline

./: .gitignore  CODEX_PROJECT_MANIFEST.md  HANDOFF-2026-05-19.md  MANIFEST.sha256  manifest.yaml  opencode.json  pyproject.toml
.github/workflows/: quality.yml
blocks/: cathedral.md
blocks/evidence/: differentiators.md  metrics-snapshot.md  system-overview.md  work-samples.md
blocks/framings/: ai-orchestrator.md  creative-technologist.md  documentation-engineer.md  esg-climate-impact.md  eu-ai-compliance.md  founder-operator.md  platform-orchestrator.md  software-engineer-at-organvm.md
blocks/identity/: 60s.md  cathedral.md
blocks/methodology/: ai-conductor.md  process-as-product.md
blocks/pitches/: noema-magazine.md
blocks/projects/: organvm-corpus.md  organvm-system.md  system-governance-framework.md
docs/: eruptio-execution-guide.md  github-sponsors-tiers.md  submission-guide.md
docs/superpowers/specs/: 2026-06-04-conductor-productization-design.md  2026-06-04-precedent-processes-surfaces-design.md
docs/ventures/: conductor-saas-pricing.md
materials/variants/cover-letters/: anthropic-fde-custom-agents.md  huggingface-dev-advocate-hub-enterprise.md  openai-se-applied-evals.md  together-ai-lead-dx-documentation.md
pipeline/active/: affirm-senior-software-engineer-infrastructure.yaml  anduril-salesforce-software-developer.yaml  anthropic-senior-staff-software-engineer-voice-platform.yaml  cloudflare-associate-solutions-engineer.yaml  coinbase-staff-software-engineer-platform-identity.yaml  dbt-labs-senior-developer-experience-advocate.yaml  elevenlabs-enterprise-solutions-engineer-latam.yaml  eyebeam-plurality.yaml  gitlab-senior-backend-engineer-ai-pipeline-execution.yaml  grafana-labs-partner-solutions-engineer-us-remote.yaml  grafana-labs-senior-software-engineer-observability-knowledge-graph-backe.yaml  grafana-labs-senior-solutions-engineer-east-coast-remote.yaml  grafana-labs-staff-software-engineer-grafana-cloud-k6-canada-remote.yaml  instacart-senior-software-engineer-ii-page-builder-retailer-platform.yaml  mongodb-senior-software-engineer-atlas-stream-processing.yaml  neo4j-solutions-engineer-india-startup-program.yaml  pioneer-works.yaml  samsara-senior-software-engineer-growth.yaml  scale-ai-senior-software-engineer.yaml  snowflake-senior-security-architect-applied-field-engineering-afe.yaml  stripe-staff-software-engineer-stream-compute.yaml  whiting-nonfiction.yaml
pipeline/closed/: cursor-software-engineer-client-infrastructure.yaml  notion-software-engineer-developer-experience.yaml  snorkel-ai-staff-applied-ai-engineer-pre-sales.yaml  twilio-developer-evangelist.yaml
scripts/: .conductor-accounts.example.yaml  acp_server.py  advance.py  agent.py  apply.py  ats_verification.py  audit_system.py  conductor_auth.py  conductor_billing.py  enrich.py  handoff_seed.py  ingest_top_roles.py  materials_validator.py  mcp_server.py  morning.py  pipeline_api.py  pipeline_freshness.py  pipeline_lib.py  pipeline_market.py  run.py  score.py  score_auto_dimensions.py  score_explain.py  score_network.py  score_pillar_dimensions.py  validate.py  validate_signals.py  web_api.py  weekly_brief.py
scripts/web/: app.js  index.html  styles.css
signals/: signal-actions.yaml
strategy/: domain-surfaces-registry.yaml  funding-landscape-2026.md  identity-positions.md  job-prioritization.md  qualification-assessment.md  storefront-playbook.md
tests/: conftest.py  test_acp_server.py  test_apply.py  test_ats_verification.py  test_build_cover_letters.py  test_conductor_auth.py  test_conductor_billing.py  test_dm_composer.py  test_enrich.py  test_handoff_seed.py  test_launchd_integration.py  test_linkedin_composer.py  test_log_dm.py  test_materials_validator.py  test_math_proofs.py  test_mcp_new_tools.py  test_network_proximity.py  test_pipeline_api.py  test_pipeline_freshness.py  test_pipeline_lib_api.py  test_pipeline_market.py  test_protocol_types.py  test_protocol_validator.py  test_quicklog.py  test_reconcile_outreach.py  test_resume_drift_report.py  test_score.py  test_score_auto_dimensions.py  test_score_consistency.py  test_score_pillar_dimensions.py  test_source_jobs.py  test_submission_audit.py  test_validate.py  test_validate_signals.py  test_web_api.py  test_wiring_apply.py  test_wiring_data_flow.py  test_wiring_signals.py  test_wiring_state.py
variants/cover-letters/: google-ami.md
