[project]
name = "application-pipeline"
version = "0.1.0"
description = "Career application pipeline — structured conversion tracking, narrative composition, and analytics"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "pyyaml",
    "ruamel.yaml",
    "typer",
    "anthropic>=0.87.0",
    "google-genai",
    "mcp",
    "python-multipart>=0.0.26",
    "cryptography>=46.0.7",
    "markdownify>=0.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock",
    "pytest-timeout",
    "ruff",
]
jobspy = [
    "python-jobspy>=1.1",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[build-system]
# setuptools>=68 + wheel: Python 3.12 removed stdlib distutils, so the build
# backend must use a setuptools recent enough to vendor it (SETUPTOOLS_USE_DISTUTILS=local).
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scripts.cli", "scripts.standup", "scripts.pipeline_status", "scripts.score", "scripts.compose"]

[project.scripts]
pipeline = "scripts.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Per-test timeout so a single hanging test fails (with a traceback naming the
# culprit) instead of stalling the whole CI job until GitHub's 6h cap.
timeout = 300
markers = [
    "synthetic: tests that perform live API calls to ATS platforms"
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"scripts/legacy-submission/*" = ["E", "F"]
"tests/*" = ["E402"]
